base/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konga-db
spec:
  selector:
    matchLabels:
      app: konga-db
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: konga-db
    spec:
      containers:
      - image: postgres:9.6
        name: konga-db
        ports:
        - containerPort: 5432
          name: konga-db
        volumeMounts:
        - name: postgres-konga-ps
          mountPath: /var/lib/postgresql/data
          subPath: postgres
      volumes:
      - name: postgres-konga-ps
        persistentVolumeClaim:
          claimName: postgres-konga-pv-claim
