base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konga-app
spec:
  selector:
    matchLabels:
      app: konga-app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: konga-app
    spec:
      containers:
      - image: pantsel/konga
        name: konga-app
        ports:
        - containerPort: 1337
          name: konga-app
