base/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: konga-db
spec:
  ports:
  - port: 5432
  selector:
    app: konga-db
  clusterIP: None
