base/oauth2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-oauth2
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: simple-oauth2
  clusterIP: None
