base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: konga-app
spec:
  ports:
  - port: 1337
    targetPort: 1337
    protocol: TCP
  selector:
    app: konga-app
  clusterIP: None
